<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emploi"
            android:title="Emploi de temps"
            android:icon="@drawable/ic_calendar"/>

        <item
            android:id="@+id/nav_documentsTeacher"
            android:title="Documents partagés"
            android:icon="@drawable/ic_documents"
            />

        <!-- Cet item sera ajouté dynamiquement pour les STUDENTS -->
        <item
            android:id="@+id/nav_absence"
            android:title="Mes absences"
            android:icon="@drawable/ic_absence"
            android:visible="false"/>

        <item
            android:id="@+id/nav_documents"
            android:title="Mes documents"
            android:icon="@drawable/ic_documents"/>

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="Déconnexion"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
</menu>